PPAPI: flush if pending before DestroyTransferBuffer

http://crrev.com/c/1105466 changed the precondition for
CommandBuffer::DestroyTransferBuffer to only require an OrderingBarrier
rather than a full flush, but the implementation in
PpapiCommandBufferProxy wasn't fixed to handle that.
This change ensures we issue the flush before the DestroyTransferBuffer
IPC if one is pending.

Bug: 866644
Change-Id: I6d6a3b6a752c4bfcd32f66153c84829140ed2b5f
Reviewed-on: https://chromium-review.googlesource.com/1152149
Reviewed-by: Sunny Sachanandani <sunnyps@chromium.org>
Commit-Queue: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578511}
Former-commit-id: 4b15cfbec4cb34d660c4582935977dc2e5281a87